--- a/training.ipynb
+++ b/training.ipynb
@@ -2,13 +2,13 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 40,
+      "execution_count": 54,
       "metadata": {
         "id": "W3MGI3mMXcNw"
       },
       "outputs": [],
       "source": [
-        "from ipyleaflet import Map, basemaps, basemap_to_tiles, Circle\n",
+        "from ipyleaflet import Map, Circle\n",
         "import requests\n",
         "import json\n",
         "import pandas as pd\n",
@@ -18,7 +18,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 41,
+      "execution_count": 55,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 42,
+      "execution_count": 56,
       "metadata": {
         "id": "iIfBviSCYrMS"
       },
@@ -43,7 +43,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 43,
+      "execution_count": 57,
       "metadata": {
         "id": "Ybp1bh0thvBe"
       },
@@ -60,7 +60,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 44,
+      "execution_count": 58,
       "metadata": {
         "id": "dWMef_j93bM4"
       },
@@ -72,7 +72,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 45,
+      "execution_count": 59,
       "metadata": {
         "id": "cTeLTgOn9YwY"
       },
@@ -101,7 +101,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 46,
+      "execution_count": 60,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1043,7 +1043,7 @@
               "29             X  "
             ]
           },
-          "execution_count": 46,
+          "execution_count": 60,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1055,7 +1055,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 47,
+      "execution_count": 61,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1997,7 +1997,7 @@
               "29             X  "
             ]
           },
-          "execution_count": 47,
+          "execution_count": 61,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -2009,7 +2009,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 48,
+      "execution_count": 62,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -2149,7 +2149,7 @@
               "29                     ALAMEDA YHONNY OROSCO 3RA ZONA       5"
             ]
           },
-          "execution_count": 48,
+          "execution_count": 62,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -2163,7 +2163,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 49,
+      "execution_count": 63,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -2346,7 +2346,7 @@
               "14           (-11.91846, -77.0269862)  "
             ]
           },
-          "execution_count": 49,
+          "execution_count": 63,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -2367,7 +2367,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 50,
+      "execution_count": 64,
       "metadata": {
         "id": "H2j0JVHyXdkC"
       },
@@ -2561,7 +2561,7 @@
               "14           (-11.91846, -77.0269862)     red  "
             ]
           },
-          "execution_count": 50,
+          "execution_count": 64,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -2584,18 +2584,34 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 51,
+      "execution_count": 65,
       "metadata": {
         "id": "La_LikrRJDX8"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "application/vnd.jupyter.widget-view+json": {
+              "model_id": "18315121ff214ffd89808223d95191fe",
+              "version_major": 2,
+              "version_minor": 0
+            },
+            "text/plain": [
+              "Map(center=[-11.9150865, -77.04784819999999], controls=(ZoomControl(options=['position', 'zoom_in_text', 'zoom…"
+            ]
+          },
+          "execution_count": 65,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "m"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 52,
+      "execution_count": 66,
       "metadata": {},
       "outputs": [
         {
@@ -2604,7 +2620,7 @@
               "15"
             ]
           },
-          "execution_count": 52,
+          "execution_count": 66,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -2617,13 +2633,6 @@
         "df\n",
         "df.to_sql('puntos', conn, if_exists='replace', index=False)"
       ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": []
     }
   ],
   "metadata": {
